--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <title>Vite + React</title>
+    <title>React Leaflet Sandbox</title>
   </head>
   <body>
     <div id="root"></div>
